[gd_scene load_steps=38 format=3 uid="uid://d35quas7pn3kd"]

[ext_resource type="Theme" uid="uid://bcvvqrqeokira" path="res://barkley2/themes/cc.tres" id="1_236kq"]
[ext_resource type="Script" path="res://barkley2/scripts/CC/cc_zodiac.gd" id="2_8yl10"]
[ext_resource type="Texture2D" uid="uid://cb81gn30gj3jn" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_backdrop_0.png" id="3_k0oe0"]
[ext_resource type="Texture2D" uid="uid://r1w3li6jp46" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_rings_0.png" id="4_3eqfa"]
[ext_resource type="Texture2D" uid="uid://xfforkoaosnt" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_rings_1.png" id="5_muhqr"]
[ext_resource type="Texture2D" uid="uid://hhios6tqfyi0" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_rings_2.png" id="6_67hhc"]
[ext_resource type="Texture2D" uid="uid://cv083i55tpuqu" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_rings_3.png" id="7_o78sr"]
[ext_resource type="Script" path="res://barkley2/scripts/CC/cc_zodiac_wheel.gd" id="8_b1074"]
[ext_resource type="Texture2D" uid="uid://pjitsiq2sw46" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_rings_4.png" id="9_mghdk"]
[ext_resource type="Texture2D" uid="uid://b1ewwaee67w3j" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_rings_5.png" id="10_5d1km"]
[ext_resource type="Texture2D" uid="uid://ccn185ubh0aki" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_rings_6.png" id="11_2gpba"]
[ext_resource type="Texture2D" uid="uid://cvjf0qclyq3d" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_rings_7.png" id="12_q3n7t"]
[ext_resource type="Texture2D" uid="uid://cio6aeoslrd6c" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_rings_8.png" id="13_mesuf"]
[ext_resource type="Texture2D" uid="uid://cwtg2k7vlfwa2" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_rings_9.png" id="14_ijsf0"]
[ext_resource type="Texture2D" uid="uid://4ort333o2imh" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_rings_10.png" id="15_gvnet"]
[ext_resource type="Texture2D" uid="uid://dbstgldbgn3m5" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_rings_11.png" id="16_xmtrb"]
[ext_resource type="Texture2D" uid="uid://clc1v4hcn2j8b" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_rings_12.png" id="17_8o34g"]
[ext_resource type="Texture2D" uid="uid://ba7m3qse4564j" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_rings_13.png" id="18_n4ou2"]
[ext_resource type="Texture2D" uid="uid://snxsy7cmm0st" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_rings_14.png" id="19_qvsb1"]
[ext_resource type="Texture2D" uid="uid://4afb2qxkycdc" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_rings_15.png" id="20_d0xbr"]
[ext_resource type="Texture2D" uid="uid://dxxsqpmxkqas0" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_sparkle_sheet.png" id="21_31kcn"]
[ext_resource type="Script" path="res://barkley2/scripts/CC/jewel_shine.gd" id="22_yckqj"]
[ext_resource type="FontFile" uid="uid://cbgm2fhhwo0ld" path="res://barkley2/resources/fonts/fn2.tres" id="23_2te1p"]
[ext_resource type="Script" path="res://barkley2/scripts/CC/clispaeth_labels.gd" id="24_itn2h"]
[ext_resource type="Texture2D" uid="uid://dvv6gn6y8gk6k" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_check_0.png" id="25_7jisu"]
[ext_resource type="Texture2D" uid="uid://2xnnmlra5vlv" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_check_1.png" id="26_3g2fc"]
[ext_resource type="Texture2D" uid="uid://cti1nqron60be" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_check_2.png" id="27_21wjo"]
[ext_resource type="Texture2D" uid="uid://bgri2j8nuf32b" path="res://barkley2/assets/b2_original/images/cc/s_cc_zodiac_check_3.png" id="28_fok3v"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ky50d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_3eqfa")
}, {
"duration": 1.0,
"texture": ExtResource("5_muhqr")
}, {
"duration": 1.0,
"texture": ExtResource("6_67hhc")
}, {
"duration": 1.0,
"texture": ExtResource("7_o78sr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ibakg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_mghdk")
}, {
"duration": 1.0,
"texture": ExtResource("10_5d1km")
}, {
"duration": 1.0,
"texture": ExtResource("11_2gpba")
}, {
"duration": 1.0,
"texture": ExtResource("12_q3n7t")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_8x43w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_mesuf")
}, {
"duration": 1.0,
"texture": ExtResource("14_ijsf0")
}, {
"duration": 1.0,
"texture": ExtResource("15_gvnet")
}, {
"duration": 1.0,
"texture": ExtResource("16_xmtrb")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_dnuls"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_8o34g")
}, {
"duration": 1.0,
"texture": ExtResource("18_n4ou2")
}, {
"duration": 1.0,
"texture": ExtResource("19_qvsb1")
}, {
"duration": 1.0,
"texture": ExtResource("20_d0xbr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_bjjxm"]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id="Gradient_jbukd"]
offsets = PackedFloat32Array(0, 0.123552, 0.818533, 0.992278)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0.818533, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_2xsww"]
gradient = SubResource("Gradient_jbukd")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_arqkj"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 20.0
direction = Vector3(0, -0.5, 0)
spread = 180.0
initial_velocity_max = 20.0
gravity = Vector3(0, -10, 0)
color_ramp = SubResource("GradientTexture1D_2xsww")
anim_offset_max = 1.0

[sub_resource type="SpriteFrames" id="SpriteFrames_0p8c8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("25_7jisu")
}, {
"duration": 1.0,
"texture": ExtResource("26_3g2fc")
}, {
"duration": 1.0,
"texture": ExtResource("27_21wjo")
}, {
"duration": 1.0,
"texture": ExtResource("28_fok3v")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="cc_zodiac" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_236kq")
script = ExtResource("2_8yl10")

[node name="backdrop" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 364.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_k0oe0")

[node name="ring_day" type="AnimatedSprite2D" parent="." node_paths=PackedStringArray("downstream_dial", "connected_display_label")]
position = Vector2(192, 105)
sprite_frames = SubResource("SpriteFrames_ky50d")
script = ExtResource("8_b1074")
debug_color = Color(0.154603, 0.74207, 0.757142, 1)
button_radius = 11.0
button_position = Vector2(80, 0)
downstream_dial = NodePath("../ring_month")
floating_label_name = "Day"
connected_display_label = NodePath("../date_birth_day_label")
sfx_hover = "sn_cc_hover_jewel1"
sfx_click = "sn_cc_click_jewel1"
sfx_drag = "sn_cc_stonewheel1"
is_active = true

[node name="ring_month" type="AnimatedSprite2D" parent="." node_paths=PackedStringArray("downstream_dial", "connected_display_label")]
position = Vector2(192, 105)
sprite_frames = SubResource("SpriteFrames_ibakg")
frame = 3
script = ExtResource("8_b1074")
button_radius = 11.0
button_position = Vector2(60, 0)
downstream_dial = NodePath("../ring_year")
floating_label_name = "Month"
connected_display_label = NodePath("../date_birth_month_label")
display_division = 12
sfx_hover = "sn_cc_hover_jewel1"
sfx_click = "sn_cc_click_jewel1"
sfx_drag = "sn_cc_stonewheel2"

[node name="ring_year" type="AnimatedSprite2D" parent="." node_paths=PackedStringArray("downstream_dial", "connected_display_label")]
position = Vector2(192, 105)
sprite_frames = SubResource("SpriteFrames_8x43w")
frame = 3
script = ExtResource("8_b1074")
debug_color = Color(0.847169, 0.597206, 0.297831, 1)
button_radius = 11.0
button_position = Vector2(40, 0)
downstream_dial = NodePath("../finish_button")
floating_label_name = "Year"
connected_display_label = NodePath("../date_birth_year_label")
display_division = 9999
sfx_hover = "sn_cc_hover_jewel1"
sfx_click = "sn_cc_click_jewel1"
sfx_drag = "sn_cc_stonewheel3"
display_year = true

[node name="finish_button" type="AnimatedSprite2D" parent="."]
position = Vector2(192, 105)
sprite_frames = SubResource("SpriteFrames_dnuls")
frame = 3
script = ExtResource("8_b1074")
can_rotate = false
button_radius = 32.0
button_position = Vector2(0, 0)
sfx_hover = "sn_cc_hover_jewel2"
sfx_click = "sn_cc_click_jewel2"

[node name="jewel_shine" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_bjjxm")
position = Vector2(192, 105)
amount = 20
process_material = SubResource("ParticleProcessMaterial_arqkj")
texture = ExtResource("21_31kcn")
script = ExtResource("22_yckqj")

[node name="date_birth_label" type="Label" parent="."]
layout_mode = 0
offset_left = 74.0
offset_top = 206.0
offset_right = 164.0
offset_bottom = 216.0
theme_override_fonts/font = ExtResource("23_2te1p")
text = "Date of birth"
horizontal_alignment = 1

[node name="date_birth_day_label" type="Label" parent="."]
layout_mode = 0
offset_left = 38.0
offset_top = 225.0
offset_right = 128.0
offset_bottom = 235.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("23_2te1p")
text = "00"
horizontal_alignment = 1

[node name="date_birth_month_label" type="Label" parent="."]
layout_mode = 0
offset_left = 65.0
offset_top = 225.0
offset_right = 155.0
offset_bottom = 235.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("23_2te1p")
text = "00"
horizontal_alignment = 1

[node name="date_birth_year_label" type="Label" parent="."]
layout_mode = 0
offset_left = 102.0
offset_top = 225.0
offset_right = 192.0
offset_bottom = 235.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("23_2te1p")
text = "0000"
horizontal_alignment = 1

[node name="pos_clispaeth_label" type="Label" parent="." node_paths=PackedStringArray("other_label")]
layout_mode = 0
offset_left = 197.0
offset_top = 206.0
offset_right = 284.0
offset_bottom = 226.0
mouse_filter = 1
theme_override_fonts/font = ExtResource("23_2te1p")
text = "Clispaeth Era"
script = ExtResource("24_itn2h")
whoami = 1
other_label = NodePath("../pre_clispaeth_label")

[node name="check" type="AnimatedSprite2D" parent="pos_clispaeth_label"]
visible = false
position = Vector2(-14, 4)
sprite_frames = SubResource("SpriteFrames_0p8c8")
frame_progress = 0.0960176

[node name="pre_clispaeth_label" type="Label" parent="." node_paths=PackedStringArray("other_label")]
layout_mode = 0
offset_left = 197.0
offset_top = 225.0
offset_right = 308.0
offset_bottom = 245.0
mouse_filter = 1
theme_override_fonts/font = ExtResource("23_2te1p")
text = "Before Clispaeth"
script = ExtResource("24_itn2h")
other_label = NodePath("../pos_clispaeth_label")

[node name="check" type="AnimatedSprite2D" parent="pre_clispaeth_label"]
visible = false
position = Vector2(-14, 4)
sprite_frames = SubResource("SpriteFrames_0p8c8")
frame_progress = 0.0960176
